--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		<div class="row">
 			<div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
 			<div class="side">
-				<a class="club" href="https://gaming.uefa.com/en/europredictor"><img src="img/EU24.png" alt="" style="width:100%;"><h4 class="heisenberg">Thử tài dự đoán tỉ số Euro 2024 </h4></a>
+				<a class="club" href="https://gaming.uefa.com/en/europredictor"><img src="img/EU24.png" alt="" style="width:100%;"><h4 class="heisenberg text-center">Thử tài dự đoán tỉ số Euro 2024 </h4></a>
       
 				</div>
 			</div>
