--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 		<div class="top-bar main-bg text-light">
 		<div class="container d-flex justify-content-between">
 		<div class="col-4"><span><a href="https://www.facebook.com/profile.php?id=100055098712490"><i class="fas fa-futbol ball"></i></a></span></div>
-			<div class="col-4"><a href="https://hieu9999999.github.io/futbol/"><img src="img/fixed logo.png" alt="" width="64" height="64"></a></div>
+			<div class="col-4">
+				<div class="container d-flex justify-content-between"><a href="https://hieu9999999.github.io/futbol/"><img src="img/fixed logo.png" alt="" width="64" height="64"></a></div></div>
 			<div>
 			<div class="col-4">
-		<div class="social-media container d-flex justify-content-around">
+		<div class="social-media container d-flex justify-content-between">
 		<a href="https://www.facebook.com/transfermarkt.global/?locale=vi_VN"><i class="fab fa-facebook heisenberg"></i></a>
 		<a href="https://www.instagram.com/transfermarkt_official/"><i class="fab fa-instagram heisenberg"></i></a>
 		<a href="https://www.youtube.com/channel/UCDOi6ogxdaY1HWAjaG2pE3g"><i class="fab fa-youtube heisenberg"></i></a>
@@ -43,39 +44,39 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"> <a class="nav-link" href="https://www.goal.com/en">Tin tức chuyển nhượng mới nhất</a></li>
-	    <li class="nav-item"> <a class="nav-link" href="https://www.newsnow.co.uk/h/Sport/Football/Pundits/Fabrizio+Romano">Tin đồn</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Giá trị chuyển nhượng </a>
+        <li class="nav-item"> <a class="nav-link" href="https://www.goal.com/en"><b class="main-cl">Tin tức chuyển nhượng mới nhất</b></a></li>
+	    <li class="nav-item"> <a class="nav-link" href="https://www.newsnow.co.uk/h/Sport/Football/Pundits/Fabrizio+Romano"><b class="main-cl">Tin đồn</b></a> </li>
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><b class="main-cl">Giá trị chuyển nhượng </b></a>
           <ul class="dropdown-menu">
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/premier-league/startseite/wettbewerb/GB1"><img width="32" height="16" src="img/UK.png" alt=""> Vương Quốc Anh</a></li>           
-  <li><a class="dropdown-item" href="https://www.transfermarkt.com/primera-division/startseite/wettbewerb/ES1"><img width="32" height="16" src="img/TBN.png" alt="">  Tây Ban Nha</a></li>            
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/bundesliga/startseite/wettbewerb/L1"><img width="32" height="16" src="img/alemania.png" alt=""> Đức</a></li>  
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/serie-a/startseite/wettbewerb/IT1"><img width="32" height="16" src="img/italy.png" alt=""> Ý</a></li>
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/ligue-1/startseite/wettbewerb/FR1"><img width="32" height="16" src="img/phap.png" alt=""> Pháp</a></li>
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/eredivisie/startseite/wettbewerb/NL1"><img width="32" height="16" src="img/halan.png" alt=""> Hà Lan</a></li> 
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/liga-portugal/startseite/wettbewerb/PO1"><img width="32" height="16" src="img/ronalcountry.png" alt=""> Bồ Đào Nha</a></li> 
-<li><a class="dropdown-item" href="https://www.transfermarkt.com/jupiler-pro-league/startseite/wettbewerb/BE1"><img width="32" height="16" src="img/bi.png" alt=""> Bỉ </a></li>                                          
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/premier-league/startseite/wettbewerb/GB1"><img width="32" height="16" src="img/UK.png" alt=""> <b>Vương Quốc Anh</b></a></li>           
+  <li><a class="dropdown-item" href="https://www.transfermarkt.com/primera-division/startseite/wettbewerb/ES1"><img width="32" height="16" src="img/TBN.png" alt="">  <b>Tây Ban Nha</b></a></li>            
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/bundesliga/startseite/wettbewerb/L1"><img width="32" height="16" src="img/alemania.png" alt=""> <b>Đức</b></a></li>  
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/serie-a/startseite/wettbewerb/IT1"><img width="32" height="16" src="img/italy.png" alt=""> <b>Ý</b></a></li>
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/ligue-1/startseite/wettbewerb/FR1"><img width="32" height="16" src="img/phap.png" alt=""> <b>Pháp</b></a></li>
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/eredivisie/startseite/wettbewerb/NL1"><img width="32" height="16" src="img/halan.png" alt=""> <b>Hà Lan</b></a></li> 
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/liga-portugal/startseite/wettbewerb/PO1"><img width="32" height="16" src="img/ronalcountry.png" alt=""> <b>Bồ Đào Nha</b></a></li> 
+<li><a class="dropdown-item" href="https://www.transfermarkt.com/jupiler-pro-league/startseite/wettbewerb/BE1"><img width="32" height="16" src="img/bi.png" alt=""> <b>Bỉ</b> </a></li>                                          
 </ul>
         </li>
 
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Giải đấu</a>
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true"><b class="main-cl">Giải đấu</b></a>
 		  <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://www.uefa.com/uefachampionsleague/"><img width="32" height="32" src="img/ucl.png" alt="">Cúp C1 Châu Âu</a></li>
-            <li><a class="dropdown-item" href="https://www.uefa.com/uefaeuropaleague/"><img width="32" height="32" src="img/c2.png" alt=""> Cúp C2 Châu Âu</a></li>
-            <li><a class="dropdown-item" href="https://www.uefa.com/uefaeuropaconferenceleague/"><img width="32" height="32" src="img/c3.png" alt=""> Cúp C3 Châu Âu</a></li>
-            <li><a class="dropdown-item" href="https://www.fifa.com/fifaplus/en/tournaments/mens/mundial-de-clubes/usa-2025"><img width="16" height="32" src="img/FIFA_Club_World_Cup_logo.png" alt=""> Cúp các câu lạc bộ thế giới</a></li>
-            <li><a class="dropdown-item" href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/canadamexicousa2026"><img width="32" height="32" src="img/wc.png" alt="">Cúp bóng đá thế giới</a></li>
-            <li><a class="dropdown-item" href="https://www.uefa.com/euro2024/"><img width="64" height="32" src="img/euro.png" alt="">Cúp bóng đá châu Âu </a></li>
+            <li><a class="dropdown-item" href="https://www.uefa.com/uefachampionsleague/"><img width="32" height="32" src="img/ucl.png" alt=""><b>Cúp C1 Châu Âu</b></a></li>
+            <li><a class="dropdown-item" href="https://www.uefa.com/uefaeuropaleague/"><img width="32" height="32" src="img/c2.png" alt=""> <b>Cúp C2 Châu Âu</b></a></li>
+            <li><a class="dropdown-item" href="https://www.uefa.com/uefaeuropaconferenceleague/"><img width="32" height="32" src="img/c3.png" alt=""> <b>Cúp C3 Châu Âu</b></a></li>
+            <li><a class="dropdown-item" href="https://www.fifa.com/fifaplus/en/tournaments/mens/mundial-de-clubes/usa-2025"><img width="16" height="32" src="img/FIFA_Club_World_Cup_logo.png" alt=""> <b>Cúp các câu lạc bộ thế giới</b></a></li>
+            <li><a class="dropdown-item" href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/canadamexicousa2026"><img width="32" height="32" src="img/wc.png" alt=""><b>Cúp bóng đá thế giới</b></a></li>
+            <li><a class="dropdown-item" href="https://www.uefa.com/euro2024/"><img width="64" height="32" src="img/euro.png" alt=""><b>Cúp bóng đá châu Âu</b> </a></li>
 			</ul>
 			  </li>
-        <li class="nav-item"> <a class="nav-link" href="https://boards.4chan.org/sp/catalog">Diễn đàn</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Liên hệ</a> 
+        <li class="nav-item"> <a class="nav-link" href="https://boards.4chan.org/sp/catalog"><b class="main-cl">Diễn đàn</b></a> </li>
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true"><b class="main-cl">Liên hệ</b></a> 
 		  <ul class="dropdown-menu">
-			<li><a class="dropdown-item" href="https://www.facebook.com/RickAstley/?locale=vi_VN"><i class="fab fa-facebook heisenberg"></i> Facebook</a></li>
-			  <li><a class="dropdown-item" href="https://www.instagram.com/ryangoslingoffical__/"><i class="fab fa-instagram heisenberg"></i> Instagram</a></li>
-			  <li><a class="dropdown-item" href="https://x.com/rickastley?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="heisenberg fab fa-twitter"></i> X</a></li>
-			  <li><a class="dropdown-item" href="https://www.youtube.com/channel/UCuAXFkgsw1L7xaCfnd5JJOw"><i class="heisenberg fab fa-youtube"></i> Youtube</a></li>
-			  <li><a class="dropdown-item" href="https://www.tiktok.com/@rickastleyofficial"><i class="heisenberg fab fa-tiktok"></i> Tiktok</a></li>
+			<li><a class="dropdown-item" href="https://www.facebook.com/RickAstley/?locale=vi_VN"><i class="fab fa-facebook main-nen"></i> <b>Facebook</b></a></li>
+			  <li><a class="dropdown-item" href="https://www.instagram.com/ryangoslingoffical__/"><i class="fab fa-instagram main-nen"></i> <b>Instagram</b></a></li>
+			  <li><a class="dropdown-item" href="https://x.com/rickastley?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="main-nen fab fa-twitter"></i> <b>X</b></a></li>
+			  <li><a class="dropdown-item" href="https://www.youtube.com/channel/UCuAXFkgsw1L7xaCfnd5JJOw"><i class="main-nen fab fa-youtube"></i> <b>Youtube</b></a></li>
+			  <li><a class="dropdown-item" href="https://www.tiktok.com/@rickastleyofficial"><i class="main-nen fab fa-tiktok"></i> <b>Tiktok</b></a></li>
 			</ul>
 		  </li>
       </ul>
@@ -100,12 +101,16 @@
 	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
 	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
 	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+	  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
 		<a class="club" href="https://baocantho.com.vn/co-hoi-nao-cho-chu-nha-duc-tai-euro-2024-a173999.html"><img src="img/EURO2024.png" class="d-block w-100 img-fluid" alt="..."></a>
 		<div>
 		<a class="club" href="https://baolamdong.vn/the-thao/202404/nuoc-duc-san-sang-cho-euro-2024-fcc0cbe/">
+			
 			<h4 class="player-price text-center">Nước Đức đã sẵn sàng cho Euro</h4></a></div>
 	  </div>
     <div class="carousel-item"> 
@@ -122,6 +127,15 @@
 	  </div>
 	  <div class="carousel-item"> 
 	  <a class="club" href="https://hieu9999999.github.io/turkiye/"><img src="img/gatay.jpg" class="d-block w-100 img-fluid" alt="..."><h4 class="player-price text-center">Thổ Nhĩ Kỳ liệu có thoát khỏi cái mác "ngựa ô" ?</h4></a>
+	  </div>
+	  <div class="carousel-item"> 
+	  <a class="club" href="https://vnexpress.net/de-bep-leverkusen-atalanta-vo-dich-europa-league-4749430.html"><img src="img/atalanta.jpg" class="d-block w-100 img-fluid" alt="..."><h4 class="player-price text-center">Atalanta chấm dứt hy vọng ăn 3 bất bại của Leverkusen.</h4></a>
+	  </div>
+	  <div class="carousel-item"> 
+	  <a class="club" href="https://www.uefa.com/news-media/news/028d-1af2f49f754f-b64e255ef0ae-1000--budapest-to-host-2026-uefa-champions-league-final/"><img src="img/puskas arena.jpg" class="d-block w-100 img-fluid" alt="..."><h4 class="player-price text-center">UEFA công bố chủ nhà của các trận chung kết cúp châu lục năm 2026</h4></a>
+	  </div>
+	  <div class="carousel-item"> 
+	  <a class="club" href="https://vietnamnet.vn/toni-kroos-tuyen-bo-giai-nghe-vien-kim-cuong-vo-gia-2283244.html"><img src="img/crocs.jpg" class="d-block w-100 img-fluid" alt="..."><h4 class="player-price text-center">Tony Kross giải nghệ sau Euro 2024</h4></a>
 	  </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span> </button>
@@ -202,7 +216,7 @@
 		<div class="row">
 			<div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-3">
 			<div class="side">
-				<a class="club" href="https://gaming.uefa.com/en/europredictor"><img src="img/EU24.png" alt="" style="width:100%;"><h4 class="heisenberg text-center">Thử tài dự đoán tỉ số Euro 2024 </h4></a>
+				<a class="club" href="https://gaming.uefa.com/en/europredictor"><img src="img/EU24.png" alt="" style="width:100%;"><h4 class="heisenberg">Thử tài dự đoán tỉ số Euro 2024 </h4></a>
       
 				</div>
 			</div>
@@ -384,7 +398,7 @@
 		</div>
 		</div>
 		<div class="footerBottom">
-		<p>Copyright&copy; 2022; Designed by<span class="hieu9">Nguyễn Minh Hiếu</span></p>
+		<p>Copyright&copy; 2024; Designed by<span class="hieu9">Nguyễn Minh Hiếu</span></p>
 		</div>
 	</footer>
 
